Revert "Dockerized"
This reverts commit 5889d4a5a78be8b5c87394166b8f96a9aebf46f0.
